// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavListItem should match snapshot when is active 1`] = `
.c0 {
  padding: 20px 30px;
  font-size: 20px;
  cursor: pointer;
  background-color: #7e7e7e;
  font-weight: bold;
}

.c0:hover {
  background-color: #bdbdbd;
}

<div
  className="c0"
  onClick={[Function]}
>
  test label
</div>
`;

exports[`SideNavListItem should match snapshot when not active 1`] = `
.c0 {
  padding: 20px 30px;
  font-size: 20px;
  cursor: pointer;
}

.c0:hover {
  background-color: #bdbdbd;
}

<div
  className="c0"
  onClick={[Function]}
>
  test label
</div>
`;
